# mortgage_calc

./: README.md  calcmortgage.c  calcmortgage.h
c_src/: CMakeLists.txt  calcmortgage.c  calcmortgage.h
cppsrc/: CMakeLists.txt  calcmortgage.cpp  calcmortgage.hpp
